creat the menu page design and html

--- a/menu.html
+++ b/menu.html
@@ -1,12 +1,216 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="./css/menu.css">
+    <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
+    <script src="https://kit.fontawesome.com/2f98a59b25.js" crossorigin="anonymous"></script>
+    <title>Menu</title>
 </head>
+<div id="overLay"></div>
+<header>
+    <div class="logo">
+        <h1>Buon appetito</h1>
+    </div>
+    <nav>
+        <ul>
+            <li><a href="#">Home</a></li>
+            <li><a href="#">Menu</a></li>
+            <li><a href="#">About us</a></li>
+            <li><a href="#">Reservation</a></li>
+        </ul>
+    </nav>
+
+</header>
+
 <body>
-    
+    <div class="main">
+        <div>
+            <img id="background-photo" src="./assets/menu.png" alt="">
+            <h1 id="menu-name">MENU</h1>
+        </div>
+        <!-- --------------------------------------this is for appetizers------------------------------------------------ -->
+        <div class="appetizers">
+            <div class="app">
+                <hr style="width: 100%;">
+                <h1>APPETIZERS</h1>
+                <hr style="width: 100%;">
+            </div>
+
+            <h3>SALADS</h3>
+            <div class="salad">
+                <ul id="left-salad">
+                    <li>Caesar Salad Supreme <br> Marzetti Supreme Caesar Salad Dressing is an indulgent ,Caesar
+                        Dressing full of cheese,
+                        anchovies,
+                        and red wine vinegar, to make it supremely delicious.</li>
+
+                    <li>Strawberry spinach salad <br> a perfect combination of fresh spinach, juicy strawberries,
+                        crunchy onions, and soft fetacheese; all tossed together. </li>
+                </ul>
+
+                <ul id="center-salad">
+                    <li>Greek salad <br> A traditional Greek salad consists of sliced cucumbers, tomatoes, green bell
+                        pepper, red onion,
+                        olives, and feta cheese .</li>
+                    <li>Salad Niçoise <br> Salad Niçoise is a French salad with tuna, green beans, hard boiled eggs,
+                        tomatoes, and potatoes that's hearty enough for a main dish.</li>
+                </ul>
+
+                <ul id="right-salad">
+                    <li>Pasta salad <br> Pasta salad is a salad dish prepared with one or more types of pasta, almost
+                        always chilled, and most often tossed in a vinegar, oil, or mayonnaise-based dressing.</li>
+                    <li>Italian Chopped Salad <br> This chopped salad is so flavorful that even salad
+                        The key ingredients : A punchy dressing, pepperoncini, and TWO types of cheese.</li>
+
+                </ul>
+
+            </div>
+        </div>
+        <!-- --------------------------------------this is for appetizers------------------------------------------------ -->
+
+        <!-- --------------------------------------this is for Main Dishes------------------------------------------------ -->
+        <div class="Main-Dishes">
+            <div class="M-D">
+                <div class="app">
+                    <hr style="width: 100%;">
+                    <h1 style="width: 100%;">Main Dishes</h1>
+                    <hr style="width: 100%;">
+                </div>
+                <!-- ------------pizza---------- -->
+                <h3>Pizza</h3>
+                <div class="pizz">
+                    <ul id="left-pizza">
+                        <h4 style="font-size: 35px;">BEEF</h4>
+                        <li>
+                            PEPPERONI <br> One of our all time specialties.A meaty feast of double
+                            Pepperoni Mozzarella and Tomato
+                            sauce
+                        </li>
+                        <li>SUPER SUPREME <br> Our famous combination of beef pepperoni, juicy beed, mushrooms, green
+                            peppers, onions,
+                            black olives and melting mozzarella cheese.</li>
+
+                    </ul>
+                    <ul id="center-pizza">
+                        <h4 style="font-size: 35px;">CHICKEN</h4>
+                        <li>
+                            GRILLED CHICKEN <br> Dig in to our succulent pieces of grilled
+                            chicken,
+                            Green peppers, Onions and fresh Tomatoes.
+                        </li>
+                        <li>BBQ CHICKEN <br> Chicken BBQ pizza : chicken , BBQ sauce , Onion.</li>
+                    </ul>
+
+                    <ul id="right-pizza">
+                        <h4 style="font-size: 35px;">VEGETARIAN</h4>
+                        <li>
+                            VEGETARIAN <br> Mushrooms, green peppers, fresh tomatoes,
+                            onions and black olives loaded on a tomato base
+                            and topped with melting mozzarella cheese.
+                        </li>
+                        <li>MARGHERITA <br> Go back to where it all began with double melting
+                            Mozzarella cheese and our special Tomato base!</li>
+                    </ul>
+                </div>
+                <!-- ------------pizza---------- -->
+                <hr>
+                <!-- ------------pasta---------- -->
+                <h3>PASTA</h3>
+                <div class="pasta">
+                    <ul id="u-pasta">
+                        <li>REGULAR PASTA</li>
+                        <h5>One of our all time specialties.A meaty feast of double Pepperoni Mozzarellaand Tomato
+                            sauce</h5>
+                        <li>SPAGHETTI POMODORO PASTA</li>
+                        <h5>Dig in to our succulent pieces of grilled chicken,Green peppers, Onions and fresh
+                            Tomatoes.</h5>
+                        <li>TRUFFLE FARFALLE PASTA</li>
+                        <h5>Mushrooms, green peppers, fresh tomatoes,onions and black olives loaded on a tomato
+                            baseand topped with melting mozzarella cheese.</h5>
+                    </ul>
+                    <ul id="l-pasta">
+                        <li>TRUFFLE FETTUCCINE PASTA</li>
+                        <h5>Our famous combination of beef pepperoni,juicy beed, mushrooms, green peppers,
+                            onions,black olives and melting mozzarella cheese.</h5>
+                        <li>FETTUCCINE ALFREDO PASTA</li>
+                        <h5>Chicken BBQ pizza : chicken , BBQ sauce , Onion.</h5>
+                        <li>PENNE PESTO PASTA WITH SHRIMP</li>
+                        <h5>Go back to where it all began with double meltingMozzarella cheese and our special
+                            Tomato base!</h5>
+                    </ul>
+                </div>
+                <!-- ------------pasta---------- -->
+            </div>
+        </div>
+        <!-- --------------------------------------this is for Main Dishes------------------------------------------------ -->
+
+        <!-- --------------------------------------this is for Drinks------------------------------------------------ -->
+        <div class="Drinks">
+            <div class="app-2" style="display: flex; align-items: center;">
+                <hr style="width: 100%;">
+                <h1>DRINKS</h1>
+                <hr style="width: 100%;">
+            </div>
+            <ul id="left-drinks">
+                <h4>JUICES</h4>
+                <li>Strawberry Banana Smoothie</li>
+                <h5>recipe features the perfect combination of real strawberry
+                    and banana fruit purees and juices.</h5>
+                <li>Mango Pineapple Smoothie</li>
+                <h5>Our Mango Pineapple Smoothie recipe features a sweet
+                    combination of fruit juices and purees such as mango and pineapple.</h5>
+                <li>Honest Kids Juice</li>
+                <h5>Honest Kids Juice drink is an organic apple juice
+                    sweetened only with fruit juice.</h5>
+            </ul>
+            <ul id="center-drinks">
+                <h4>SODA</h4>
+                <li>Coca-Cola</li>
+                <h5>Enjoy a cold, refreshing Coca-Cola soda from Buon Appetito
+                    that complements all your menu favorites.</h5>
+                <li>Sprite</li>
+                <h5>Cool off with the refreshing Buon Appetito Sprite</h5>
+                <li>Fanta</li>
+                <h5>Sip on the bubbly, refreshing orange flavor of Fanta Orange soda from Buon Appetito Fanta</h5>
+            </ul>
+            <ul id="right-drinks">
+                <h4>HOT DRINKS</h4>
+                <li>HOT TEA</li>
+                <h5>Refresh your mornings with the best Hot Tea at Buon Appetito Hot Tea has a robust black tea flavor
+                    with hints of floral and orange notes.
+                </h5>
+                <li>HOT CHOCOLATE</li>
+                <h5>Taste the delicious chocolatey flavor of Buon Appetito Hot Chocolate.</h5>
+            </ul>
+
+        </div>
+        <!-- --------------------------------------this is for Drinks------------------------------------------------ -->
+        <hr>
+    </div>
 </body>
+<footer class="footer">
+    <div class="left-footer">
+        <div>Follow us</div>
+        <div class="icons">
+            <a href="https://web.facebook.com/osamayaseen97/" class="fa fa-facebook" style="color: white;"></a>
+            <a href="https://www.instagram.com/osama_ya/" class="fa fa-instagram" style="color: white;"></a>
+            <i class="fa fa-envelope" style="font-size:36px"></i>
+        </div>
+    </div>
+
+    <div class="buon-appetito-all">
+        © 2023 Buon Appetito, All Rights Reserved
+    </div>
+    <div class="right-footer">
+        <div>Visit us : 24th Avenue</div>
+        <div>Working hours : 9am - 7pm</div>
+    </div>
+
+
+</footer>
+
 </html>
