finishing the styling on Menu page

--- a/menu.html
+++ b/menu.html
@@ -33,15 +33,15 @@
             <h1 id="menu-name">MENU</h1>
         </div>
         <!-- --------------------------------------this is for appetizers------------------------------------------------ -->
-        <div class="appetizers">
+        <div class="appetizers" style="padding-top: 40px;">
             <div class="app">
                 <hr style="width: 100%;">
-                <h1>APPETIZERS</h1>
+                <h1 style="width: 100%; padding-left: 30px;">APPETIZERS</h1>
                 <hr style="width: 100%;">
             </div>
 
-            <h3>SALADS</h3>
-            <div class="salad">
+            <h3 style="padding-top: 40px;">SALADS</h3>
+            <div class="salad" style="padding-top: 30px;">
                 <ul id="left-salad">
                     <li>Caesar Salad Supreme <br> Marzetti Supreme Caesar Salad Dressing is an indulgent ,Caesar
                         Dressing full of cheese,
@@ -73,16 +73,16 @@
         <!-- --------------------------------------this is for appetizers------------------------------------------------ -->
 
         <!-- --------------------------------------this is for Main Dishes------------------------------------------------ -->
-        <div class="Main-Dishes">
+        <div class="Main-Dishes" style="padding-top: 40px;">
             <div class="M-D">
-                <div class="app">
+                <div class="app-1">
                     <hr style="width: 100%;">
-                    <h1 style="width: 100%;">Main Dishes</h1>
+                    <h1 style="width: 100%; padding-left: 30px;">Main Dishes</h1>
                     <hr style="width: 100%;">
                 </div>
                 <!-- ------------pizza---------- -->
-                <h3>Pizza</h3>
-                <div class="pizz">
+                <h3 style="padding-top: 40px;">Pizza</h3>
+                <div class="pizz" style="padding-top: 30px; padding-bottom: 40px;">
                     <ul id="left-pizza">
                         <h4 style="font-size: 35px;">BEEF</h4>
                         <li>
@@ -119,28 +119,27 @@
                 <!-- ------------pizza---------- -->
                 <hr>
                 <!-- ------------pasta---------- -->
-                <h3>PASTA</h3>
-                <div class="pasta">
-                    <ul id="u-pasta">
-                        <li>REGULAR PASTA</li>
-                        <h5>One of our all time specialties.A meaty feast of double Pepperoni Mozzarellaand Tomato
-                            sauce</h5>
-                        <li>SPAGHETTI POMODORO PASTA</li>
-                        <h5>Dig in to our succulent pieces of grilled chicken,Green peppers, Onions and fresh
-                            Tomatoes.</h5>
-                        <li>TRUFFLE FARFALLE PASTA</li>
-                        <h5>Mushrooms, green peppers, fresh tomatoes,onions and black olives loaded on a tomato
-                            baseand topped with melting mozzarella cheese.</h5>
+                <h3 style="padding-top: 40px;">PASTA</h3>
+                <div class="pasta" style="padding-top: 30px;">
+                    <ul id="left-pasta">
+                        <li>REGULAR PASTA <br> One of our all time specialties.A meaty feast of double Pepperoni
+                            Mozzarellaand Tomato
+                            sauce</li>
+                        <li>TRUFFLE FETTUCCINE PASTA <br> Our famous combination of beef pepperoni,juicy beed,
+                            mushrooms, green peppers,onions,black olives and melting mozzarella cheese.</li>
                     </ul>
-                    <ul id="l-pasta">
-                        <li>TRUFFLE FETTUCCINE PASTA</li>
-                        <h5>Our famous combination of beef pepperoni,juicy beed, mushrooms, green peppers,
-                            onions,black olives and melting mozzarella cheese.</h5>
-                        <li>FETTUCCINE ALFREDO PASTA</li>
-                        <h5>Chicken BBQ pizza : chicken , BBQ sauce , Onion.</h5>
-                        <li>PENNE PESTO PASTA WITH SHRIMP</li>
-                        <h5>Go back to where it all began with double meltingMozzarella cheese and our special
-                            Tomato base!</h5>
+                    <ul id="center-pasta">
+                        <li>SPAGHETTI POMODORO PASTA <br> Dig in to our succulent pieces of grilled chicken,Green
+                            peppers,Onions and fresh Tomatoes.</li>
+                        <li>FETTUCCINE ALFREDO PASTA<br> Chicken BBQ pizza : chicken , BBQ sauce , Onion.</li>
+                    </ul>
+
+                    <ul id="right-pasta">
+                        <li>TRUFFLE FARFALLE PASTA<br> Mushrooms, green peppers, fresh tomatoes,
+                            onions and black olives loaded on a tomato base and topped with melting mozzarella cheese.
+                        </li>
+                        <li>PENNE PESTO PASTA WITH SHRIMP<br> Go back to where it all began with double melting
+                            Mozzarella cheese and our special Tomato base!</li>
                     </ul>
                 </div>
                 <!-- ------------pasta---------- -->
@@ -149,44 +148,40 @@
         <!-- --------------------------------------this is for Main Dishes------------------------------------------------ -->
 
         <!-- --------------------------------------this is for Drinks------------------------------------------------ -->
-        <div class="Drinks">
-            <div class="app-2" style="display: flex; align-items: center;">
+        <div>
+            <div class="app-2">
                 <hr style="width: 100%;">
-                <h1>DRINKS</h1>
+                <h1 style="width: 100%; padding-left: 200px;">Drinks</h1>
                 <hr style="width: 100%;">
             </div>
-            <ul id="left-drinks">
-                <h4>JUICES</h4>
-                <li>Strawberry Banana Smoothie</li>
-                <h5>recipe features the perfect combination of real strawberry
-                    and banana fruit purees and juices.</h5>
-                <li>Mango Pineapple Smoothie</li>
-                <h5>Our Mango Pineapple Smoothie recipe features a sweet
-                    combination of fruit juices and purees such as mango and pineapple.</h5>
-                <li>Honest Kids Juice</li>
-                <h5>Honest Kids Juice drink is an organic apple juice
-                    sweetened only with fruit juice.</h5>
-            </ul>
-            <ul id="center-drinks">
-                <h4>SODA</h4>
-                <li>Coca-Cola</li>
-                <h5>Enjoy a cold, refreshing Coca-Cola soda from Buon Appetito
-                    that complements all your menu favorites.</h5>
-                <li>Sprite</li>
-                <h5>Cool off with the refreshing Buon Appetito Sprite</h5>
-                <li>Fanta</li>
-                <h5>Sip on the bubbly, refreshing orange flavor of Fanta Orange soda from Buon Appetito Fanta</h5>
-            </ul>
-            <ul id="right-drinks">
-                <h4>HOT DRINKS</h4>
-                <li>HOT TEA</li>
-                <h5>Refresh your mornings with the best Hot Tea at Buon Appetito Hot Tea has a robust black tea flavor
-                    with hints of floral and orange notes.
-                </h5>
-                <li>HOT CHOCOLATE</li>
-                <h5>Taste the delicious chocolatey flavor of Buon Appetito Hot Chocolate.</h5>
-            </ul>
+            <div class="Drinks" style="padding-top: 40px; padding-bottom: 60px;">
+                <ul id="left-drinks">
+                    <h4 style="font-size: 35px;">JUICES</h4>
+                    <li>Strawberry Banana Smoothie <br> recipe features the perfect combination of real strawberry
+                        and banana fruit purees and juices.</li>
+                    <li>Mango Pineapple Smoothie <br> Our Mango Pineapple Smoothie recipe features a sweet
+                        combination of fruit juices and purees such as mango and pineapple.</li>
+                    <li>Honest Kids Juice <br> Honest Kids Juice drink is an organic apple juice
+                        sweetened only with fruit juice.</li>
+                </ul>
+                <ul id="center-drinks">
+                    <h4 style="font-size: 35px;">SODA</h4>
+                    <li>Coca-Cola <br> Enjoy a cold, refreshing Coca-Cola soda from Buon Appetito
+                        that complements all your menu favorites.</li>
+                    <li>Sprite <br> Cool off with the refreshing Buon Appetito Sprite</li>
 
+                    <li>Fanta <br> Sip on the bubbly, refreshing orange flavor of Fanta Orange soda from Buon Appetito
+                        Fanta
+                    </li>
+                </ul>
+                <ul id="right-drinks">
+                    <h4 style="font-size: 35px;">HOT DRINKS</h4>
+                    <li>HOT TEA <br> Refresh your mornings with the best Hot Tea at Buon Appetito Hot Tea has a robust
+                        black
+                        tea flavor with hints of floral and orange notes.</li>
+                    <li>HOT CHOCOLATE <br> Taste the delicious chocolatey flavor of Buon Appetito Hot Chocolate.</li>
+                </ul>
+            </div>
         </div>
         <!-- --------------------------------------this is for Drinks------------------------------------------------ -->
         <hr>
