I add about us webpage

--- a/about-us.html
+++ b/about-us.html
@@ -1,12 +1,85 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Buon Appetito Restaurant</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
 </head>
+
 <body>
-    
+    <header class="back-ground-img">
+
+        <h1>Buon Appetito</h1>
+        <nav>
+            <link rel="stylesheet" href="./css/about-us.css" />
+            <a href="index.html" title="go to Home page" target="_blanck">Home</a>
+            <a href="menu.html" title="go to Menu page" target="_blanck">Menu</a>
+            <a href="about-us.html" title="go to About us page" target="_blanck">About us</a>
+            <a href="reservation.html" title="go to Reservation page" target="_blanck">Reservation</a>
+        </nav>
+        <div class="abouutt">About Us</div>
+
+
+    </header>
+
+    <main>
+
+        <div>
+            <div class="about">
+                <div class="description">
+                    <div>Buon Appetito</div>
+                    <p>
+                        Welcome To Our Authentic Italian Restaurant! Our Passion For Italian Cuisine Stems From Our Deep
+                        Appreciation For The Rich And Diverse Flavors Of Italy. We Believe That Food Should Not Only Be
+                        Delicious But Also A Reflection Of The Culture And History Of The Region It Represents. Our
+                        Dishes
+                        Are
+                        Prepared With Love And Care, Using Only The Freshest Ingredients And Traditional Cooking
+                        Methods.
+                        Whether You're In The Mood For A Classic Pasta Dish Or A Savory Pizza, We Have Something For
+                        Everyone.
+                        Come And Experience The Warm Hospitality And Authentic Flavors Of Italy At Our Restaurant
+                    </p>
+                </div>
+                <div class="imgDesc">
+                    <img src="./images/about-us/other/aboutUs2.jpg" width="200px">
+                </div>
+            </div>
+        </div>
+        <div id="founderMembers">The Founders</div>
+        <div id="founders">
+
+        </div>
+
+
+
+
+    </main>
+
+    <footer>
+        <div>
+            <div>
+                <div>Follow Us</div>
+                <div class="a">
+                    <a class="fa fa-linkedin-square" href="https://linkedin.com/"></a>
+                    <a class="fa fa-facebook-square" href="https://facebook.com/"></a>
+                    <a class="fa fa-instagram" href="https://instagram.com/"></a>
+                </div>
+            </div>
+            <div>
+                <div>Visit Us: 7th circle</div>
+                <div>Working Hours: 12PM - 12AM</div>
+            </div>
+        </div>
+
+
+        <div>&copy; 2023 Buon Appetito, All Rights Reserved</div>
+    </footer>
+    <script src="js/aboutUs.js"></script>
 </body>
+
 </html>
