adding the header after chaging from ahmed and adding the logo

--- a/menu.html
+++ b/menu.html
@@ -15,8 +15,8 @@
 </head>
 <div id="overLay"></div>
 <header>
-    <div class="logo">
-        <h1>Buon appetito</h1>
+    <div>
+        <img id="logo" src="./assets/logo.png" alt="">
     </div>
     <nav>
         <ul>
