--- a/menu.html
+++ b/menu.html
@@ -20,10 +20,10 @@
     </div>
     <nav>
         <ul>
-            <li><a href="#">Home</a></li>
-            <li><a href="#">Menu</a></li>
-            <li><a href="#">About us</a></li>
-            <li><a href="#">Reservation</a></li>
+            <li><a href="index.html">Home</a></li>
+            <li><a href="menu.html">Menu</a></li>
+            <li><a href="about-us.html">About us</a></li>
+            <li><a href="reservation.html">Reservation</a></li>
         </ul>
     </nav>
 
