adding footer to home

--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
         <hr id="FN" width="100%">
         <button>
             <div>
-                <img id="menu-nav" src="./assets/pizza.jpg" width="1352" height="609">
+                <a href="menu.html"><img id="menu-nav" src="./assets/pizza.jpg" width="1352" height="609"></a>
                 <h1 id="section-menu">Menu</h1>
             </div>
         </button>
@@ -68,7 +68,7 @@
         </button>
         <button>
             <div>
-                <img id="about-us-nav" src="./assets/aboutUsPasta.jpg">
+                <a href="about-us.html"><img id="about-us-nav" src="./assets/aboutUsPasta.jpg"></a>
                 <h1 id="section-about-us">About us</h1>
             </div>
         </button>
