styling the popup box

--- a/reservation.html
+++ b/reservation.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/reservation.css">
     <link href="https://fonts.googleapis.com/css2?family=Oswald&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/2f98a59b25.js" crossorigin="anonymous"></script>
     <title>Reservation page</title>
 </head>
 
@@ -77,19 +78,26 @@
             </fieldset>
         </div>
     </main>
-    <div class="footerSpc">
-        <footer class="footer">
-            <div class="visit-us">Visit us : 24th Avenue</div>
-            <div class="working-hours">Working hours : 9am - 7pm</div>
-            <div class="follow-us">Follow us</div>
-            <div class="icons">icons</div>
-            <div class="buon-appetito-all">
-                © 2023 Buon Appetito, All Rights Reserved
+    <footer class="footer">
+        <div class="left-footer">
+            <div>Follow us</div>
+            <div class="icons">
+                <a href="https://web.facebook.com/osamayaseen97/" class="fa fa-facebook" style="color: white;"></a>
+                <a href="https://www.instagram.com/osama_ya/" class="fa fa-instagram" style="color: white;"></a>
+                <i class="fa fa-envelope" style="font-size:36px"></i>
             </div>
+        </div>
+
+        <div class="buon-appetito-all">
+            © 2023 Buon Appetito, All Rights Reserved
+        </div>
+        <div class="right-footer">
+            <div>Visit us : 24th Avenue</div>
+            <div>Working hours : 9am - 7pm</div>
+        </div>
 
 
-        </footer>
-    </div>
+    </footer>
     <script src="reservation.js"></script>
 </body>
 
