--- a/about-us.html
+++ b/about-us.html
@@ -1,33 +1,28 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Buon Appetito Restaurant</title>
+    <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
-
 <body>
+    <div id="overLay"></div>
     <header class="back-ground-img">
-
-        <h1>Buon Appetito</h1>
+            <img id="logo" src="./assets/logo.png" alt="">
+        <!-- <h1>Buon Appetito</h1> -->
         <nav>
             <link rel="stylesheet" href="./css/about-us.css" />
             <a href="index.html" title="go to Home page" target="_blanck">Home</a>
             <a href="menu.html" title="go to Menu page" target="_blanck">Menu</a>
             <a href="about-us.html" title="go to About us page" target="_blanck">About us</a>
             <a href="reservation.html" title="go to Reservation page" target="_blanck">Reservation</a>
-        </nav>
+        </nav><link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
         <div class="abouutt">About Us</div>
-
-
     </header>
-
     <main>
-
         <div>
             <div class="about">
                 <div class="description">
@@ -52,34 +47,26 @@
         </div>
         <div id="founderMembers">The Founders</div>
         <div id="founders">
-
         </div>
-
-
-
-
     </main>
-
-    <footer>
-        <div>
-            <div>
-                <div>Follow Us</div>
-                <div class="a">
-                    <a class="fa fa-linkedin-square" href="https://linkedin.com/"></a>
-                    <a class="fa fa-facebook-square" href="https://facebook.com/"></a>
-                    <a class="fa fa-instagram" href="https://instagram.com/"></a>
-                </div>
-            </div>
-            <div>
-                <div>Visit Us: 7th circle</div>
-                <div>Working Hours: 12PM - 12AM</div>
+    <hr>
+    <footer class="footer">
+        <div class="left-footer">
+            <div>Follow us</div>
+            <div class="icons">
+                <a href="https://web.facebook.com/osamayaseen97/" class="fa fa-facebook" style="color: white;"></a>
+                <a href="https://www.instagram.com/osama_ya/" class="fa fa-instagram" style="color: white;"></a>
+                <i class="fa fa-envelope" style="font-size:36px"></i>
             </div>
         </div>
-
-
-        <div>&copy; 2023 Buon Appetito, All Rights Reserved</div>
+        <div class="buon-appetito-all">
+            © 2023 Buon Appetito, All Rights Reserved
+        </div>
+        <div class="right-footer">
+            <div>Visit us : 24th Avenue</div>
+            <div>Working hours : 9am - 7pm</div>
+        </div>
     </footer>
     <script src="js/aboutUs.js"></script>
 </body>
-
 </html>
