--- a/reservation.html
+++ b/reservation.html
@@ -15,8 +15,8 @@
     <img class="bg" src="assets/reservation.jpg" alt="background">
     <div id="overLay"></div>
     <header>
-        <div class="logo">
-            <h1>Buon appetito</h1>
+        <div>
+            <img id="logo" src="./assets/restaurantLogo.png" alt="">
         </div>
         <nav>
             <ul>
@@ -27,7 +27,6 @@
             </ul>
         </nav>
     </header>
-
     <main>
         <div class="formContainer">
             <fieldset class="formSec">
