Edit the logo size and adding horizantal line srounding the sections

--- a/about-us.html
+++ b/about-us.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,13 @@
     <title>Buon Appetito Restaurant</title>
     <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+    <link rel="stylesheet" href="./css/about-us.css" />
 </head>
+
 <body>
     <div id="overLay"></div>
     <header class="back-ground-img">
-            <img id="logo" src="./assets/logo.png" alt="">
+        <img id="logo" src="./assets/logo.png" alt="">
         <!-- <h1>Buon Appetito</h1> -->
         <nav>
             <link rel="stylesheet" href="./css/about-us.css" />
@@ -19,8 +22,15 @@
             <a href="menu.html" title="go to Menu page" target="_blanck">Menu</a>
             <a href="about-us.html" title="go to About us page" target="_blanck">About us</a>
             <a href="reservation.html" title="go to Reservation page" target="_blanck">Reservation</a>
-        </nav><link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
-        <div class="abouutt">About Us</div>
+        </nav>
+        <link href="https://fonts.googleapis.com/css?family=Oswald:200,300,regular,500,600,700" rel="stylesheet" />
+        <div class="abboouut"></div>
+        <div class="line-container">
+            <div class="line"></div>
+            <span class="abboouutt">About Us</span>
+            <div class="line"></div>
+        </div>
+        <div class="abboouut"></div>
     </header>
     <main>
         <div>
@@ -31,13 +41,12 @@
                         Welcome To Our Authentic Italian Restaurant! Our Passion For Italian Cuisine Stems From Our Deep
                         Appreciation For The Rich And Diverse Flavors Of Italy. We Believe That Food Should Not Only Be
                         Delicious But Also A Reflection Of The Culture And History Of The Region It Represents. Our
-                        Dishes
-                        Are
-                        Prepared With Love And Care, Using Only The Freshest Ingredients And Traditional Cooking
-                        Methods.
-                        Whether You're In The Mood For A Classic Pasta Dish Or A Savory Pizza, We Have Something For
-                        Everyone.
-                        Come And Experience The Warm Hospitality And Authentic Flavors Of Italy At Our Restaurant
+                        Dishes Are Prepared With Love And Care, Using Only The Freshest Ingredients And Traditional
+                        Cooking
+                        Methods. Whether You're In The Mood For A Classic Pasta Dish Or A Savory Pizza, We Have
+                        Something For
+                        Everyone. Come And Experience The Warm Hospitality And Authentic Flavors Of Italy At Our
+                        Restaurant
                     </p>
                 </div>
                 <div class="imgDesc">
@@ -51,6 +60,7 @@
     </main>
     <hr>
     <footer class="footer">
+
         <div class="left-footer">
             <div>Follow us</div>
             <div class="icons">
@@ -59,6 +69,7 @@
                 <i class="fa fa-envelope" style="font-size:36px"></i>
             </div>
         </div>
+
         <div class="buon-appetito-all">
             © 2023 Buon Appetito, All Rights Reserved
         </div>
@@ -66,7 +77,10 @@
             <div>Visit us : 24th Avenue</div>
             <div>Working hours : 9am - 7pm</div>
         </div>
+
+
     </footer>
     <script src="js/aboutUs.js"></script>
 </body>
+
 </html>
